Fix game not being visible
https://www.dropbox.com/s/qrkoz4q0g5pvuji/Screenshot%202016-10-20%2011.1
8.55.png?dl=1

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+/**
+ * @see https://github.com/FormidableLabs/react-game-kit/issues/6#issuecomment-248789799
+ */
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
